# LearnFFmepg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kuaiyou/learnffmepg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kuaiyou/learnffmepg/: MainActivity.java
app/src/main/java/com/kuaiyou/learnffmepg/media/: AudioRecorder.java  FFMediaPlayer.java  FFMediaRecorder.java  MediaRecorderContext.java  MyGLSurfaceView.java  MySurfaceView.java
app/src/main/jni/: CMakeLists.txt  learn-ffmpeg.cpp
app/src/main/jni/player/: FFMediaPlayer.cpp  FFMediaPlayer.h  LearnFFmepg.cpp  LearnFFmepg.h  MediaPlayer.h
app/src/main/jni/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/jni/player/render/audio/: OpenSLRender.cpp  OpenSLRender.h
app/src/main/jni/player/render/video/: NativeRender.cpp  VideoRender.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kuaiyou/learnffmepg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
